src/objects/Milestone1_Nag__c.object
<CustomObject>
    <description>Force.com Labs - PM - This is a nag object. Allows the Nag Engine to execute against objects.</description>
    <fields>
        <fullName>Assigned_To_Running_User__c</fullName>
        <formula>IF( Assigned_To__c =  $User.Id ,&quot;YES&quot;,&quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Running User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Nags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <formula>IF( Project__c &lt;&gt; null, Project__r.Deadline__c,
IF( Project_Milestone__c &lt;&gt; null, Project_Milestone__r.Deadline__c,
IF( Project_Task__c &lt;&gt; null, Project_Task__r.Due_Date__c,Today())))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>IF( Project__c &lt;&gt; null, HYPERLINK(Project__c, &quot;Project Link&quot;),
IF( Project_Milestone__c &lt;&gt; null, HYPERLINK(Project__c, &quot;Milestone Link&quot;),
IF( Project_Task__c &lt;&gt; null, HYPERLINK(Project__c, &quot;Task Link&quot;),&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nag_Reason__c</fullName>
        <label>Nag Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nag_Status__c</fullName>
        <label>Nag Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <formula>IF( Project__c &lt;&gt; null, Project__c,
IF( Project_Milestone__c &lt;&gt; null, Project_Milestone__c,
IF( Project_Task__c &lt;&gt; null, Project_Task__c,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <formula>IF( Project__c &lt;&gt; null, Project__r.Name,
IF( Project_Milestone__c &lt;&gt; null, Project_Milestone__r.Name,
IF( Project_Task__c &lt;&gt; null, Project_Task__r.Name,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Owner_Id__c</fullName>
        <description>Bring down the Owner of the Parent Record. Check Project, then Milestone, then Task. Validation rules only allow us to have one Parent Lookup from those three lookups.</description>
        <formula>IF( Project__c &lt;&gt; null, Project__r.OwnerId,
IF( Project_Milestone__c &lt;&gt; null,  Project_Milestone__r.OwnerId, 
IF( Project_Task__c &lt;&gt; null, Project_Task__r.OwnerId__c,null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Status__c</fullName>
        <formula>IF( Project_Milestone__c  &lt;&gt; null,  IF(Project_Milestone__r.Complete__c,&apos;True&apos;,&apos;False&apos;),
     IF( Project_Task__c &lt;&gt; null, IF(Project_Milestone__r.Complete__c,&apos;True&apos;,&apos;False&apos;),&apos;false&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Complete Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Type__c</fullName>
        <formula>IF( Project__c &lt;&gt; null, &apos;Project&apos;,
IF( Project_Milestone__c &lt;&gt; null, &apos;Milestone&apos;,
IF( Project_Task__c &lt;&gt; null, &apos;Task&apos;,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipName>Project_Nags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipName>Project_Nags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipName>Project_Nags</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Nag</label>
    <nameField>
        <displayFormat>NAG-{00000}</displayFormat>
        <label>Project Nag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_have_a_parent</fullName>
        <active>true</active>
        <errorConditionFormula>Project__c == null &amp;&amp; Project_Milestone__c == null &amp;&amp; Project_Task__c == null</errorConditionFormula>
        <errorMessage>There must be one parent record selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_one_parent_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>(Project__c != null &amp;&amp; (Project_Milestone__c != null || Project_Task__c != null)) ||
(Project_Milestone__c != null &amp;&amp; (Project__c != null || Project_Task__c != null)) ||
(Project_Task__c != null &amp;&amp; (Project_Milestone__c != null || Project__c != null))</errorConditionFormula>
        <errorMessage>Only one parent object is currently allowed. For example, If Project is set as the lookup, then Milestone and Task must be empty.</errorMessage>
    </validationRules>
</CustomObject>